--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 group 'io.github.highbar'
 
 apply plugin: 'java'
+apply plugin: 'maven'
 
 repositories {
   mavenCentral()
@@ -8,4 +9,29 @@ repositories {
 
 dependencies {
   compile 'org.slf4j:slf4j-log4j12:1.7.12'
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+  classifier = 'sources'
+  from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+  classifier = 'javadoc'
+  from javadoc.destinationDir
+}
+
+artifacts {
+  archives sourcesJar
+  archives javadocJar
+}
+
+uploadArchives {
+  repositories {
+    mavenDeployer {
+      repository(url: '')
+      pom.version = ''
+      pom.artifactId = ''
+    }
+  }
 }
