--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
-group 'io.github.highbar'
+group "io.github.highbar"
 
-apply plugin: 'java'
+apply plugin: "java"
 
 repositories {
   mavenCentral()
 }
 
 dependencies {
-  compile 'org.slf4j:slf4j-log4j12:1.7.12'
+  testCompile "de.bechte.junit:junit-hierarchicalcontextrunner:4.12.0"
+  testCompile "junit:junit:4.12"
+  testCompile "org.mockito:mockito-core:2.+"
 }
